kubernetes/apps/news/postgresql/app/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: news-postgresql
  labels:
    app.kubernetes.io/name: news-postgresql
spec:
  replicas: 1
  serviceName: news-postgresql
  selector:
    matchLabels:
      app.kubernetes.io/name: news-postgresql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: news-postgresql
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 70
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      containers:
        - name: postgresql
          image: postgres:17.11-alpine3.24
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          startupProbe:
            exec:
              command: [pg_isready, --host=127.0.0.1, --port=5432, --username=postgres, --dbname=freshrss]
            failureThreshold: 60
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: [pg_isready, --host=127.0.0.1, --port=5432, --username=postgres, --dbname=freshrss]
            failureThreshold: 6
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command: [pg_isready, --host=127.0.0.1, --port=5432, --username=postgres, --dbname=freshrss]
            failureThreshold: 6
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
            runAsGroup: 70
            runAsNonRoot: true
            runAsUser: 70
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
            - name: postgresql-run
              mountPath: /var/run/postgresql
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: news-postgresql-data
        - name: init
          configMap:
            name: news-postgresql-init
            defaultMode: 0555
        - name: postgresql-run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
