kubernetes/apps/news/postgresql/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: news-postgresql
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: news-postgresql
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: news
            app.kubernetes.io/name: freshrss
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egress: []
